--- a/index.html
+++ b/index.html
@@ -255,8 +255,7 @@
                   After finishing grade 2 with Merit (83%) and Distinction in
                   grade 4 (91%) I finally completed grade 7 in Electric Guitar
                   from Rockschool with Merit (88%). I will be completing grade 8
-                  and Diplloma in the near future. Here is a link to the score
-                  report:
+                  and Diploma in the near future.
                 </p>
               </div>
             </li>
