--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
         ></a>
       </li>
     </ul>
-
     <!-- BORDER LINE -->
 
     <div class="longline"></div>
@@ -178,6 +177,10 @@
         />
       </a>
     </section>
+
+    <div class="maintenance">Under Maintenance</div>
+
+    <div class="maintenance2">try using a bigger device</div>
 
     <!-- SECTION TWO -->
 
