--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
           style="border-radius: 12px"
           src="https://open.spotify.com/embed/playlist/0sx5DZhqGwKCdYexC1aHsU?utm_source=generator"
           width="35%"
+          height="540"
           frameborder="0"
           allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
