weird light-dark mode glitch

--- a/index.html
+++ b/index.html
@@ -71,8 +71,13 @@
       </ul>
     </nav>
 
-    <div class="toggle">
-      <input type="checkbox" id="theme" class="toggle-input" checked />
+    <div
+      class="toggle"
+      data-aos="fade-right"
+      data-aos-duration="1000"
+      data-aos-once="true"
+    >
+      <input type="checkbox" id="theme" class="toggle-input" />
       <label for="theme" class="toggle-label">
         <div class="toggle-icon"><i class="far fa-moon"></i></div>
       </label>
