--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="icon" href="Capture-modified.png" />
+    <link rel="icon" href="./assets/pfp1-modified.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
