--- a/index.html
+++ b/index.html
@@ -269,16 +269,17 @@
             </li>
             <li class="timeline-item">
               <div class="timeline-info">
-                <span>22 August, 2022</span>
+                <span>26 July, 2022</span>
               </div>
               <div class="timeline-marker"></div>
               <div class="timeline-content">
                 <h3 class="timeline-title">Achievements</h3>
                 <p>
-                  After finishing grade 2 with Merit (83%) and Distinction in
-                  grade 4 (91%) I finally completed grade 7 in Electric Guitar
-                  from Rockschool with Merit (88%). I will be completing grade 8
-                  and Diploma in the near future.
+                  I am proud to have completed grade 2 in electric guitar with a
+                  Merit (83%) and grade 4 with a Distinction (91%) from
+                  Rockschool. Most recently, I completed grade 7 with a Merit
+                  (88%) and am looking forward to completing grade 8 and earning
+                  my Diploma in the near future.
                 </p>
               </div>
             </li>
@@ -331,11 +332,11 @@
               <div class="timeline-content">
                 <h3 class="timeline-title">Code Warriors</h3>
                 <p>
-                  I have been a part of this club for almost 1.5 years. During
-                  this time I learnt and polished my skills in the domain of
-                  Competitive Programming and Cryptic Hunting. As a core member
-                  and Cryptic head i have organised multiple events (both inter
-                  and intra) with my clubmates.
+                  I have been a member of this club for almost 1.5 years, during
+                  which, I have developed my skills in competitive programming
+                  and cryptic hunting. As a core member and the head of the
+                  cryptic team, I have organized several events, both within and
+                  outside the club.
                 </p>
               </div>
             </li>
@@ -347,9 +348,82 @@
               <div class="timeline-content">
                 <h3 class="timeline-title">Re-Dcrypt</h3>
                 <p>
-                  Organised and designed levels for Re-Dcrypt 2 - a two day
-                  national Cryptic Hunt held on 8th October, 2022 with 200+
-                  participants and multiple sponsors and prizes.
+                  I had the opportunity to organize and design levels for
+                  Re-Dcrypt 2, a national cryptic hunt held on October 8, 2022.
+                  The event featured over 200 participants and multiple sponsors
+                  and prizes.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <section class="section-three">
+      <div class="section-text">
+        <div
+          class="sub-title2"
+          data-aos="fade-right"
+          data-aos-duration="1000"
+          data-aos-once="true"
+        >
+          Internships
+        </div>
+      </div>
+      <img
+        src="./assets/donut.jpg"
+        class="donut-img"
+        data-aos="fade-left"
+        data-aos-duration="1000"
+        data-aos-once="true"
+      />
+      <img
+        src="./assets/hitech.jpg"
+        class="hitech-img"
+        data-aos="fade-left"
+        data-aos-duration="1000"
+        data-aos-once="true"
+      />
+    </section>
+
+    <div class="container-fluid1">
+      <div class="row example-basic">
+        <div
+          class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2"
+          data-aos="fade-right"
+          data-aos-duration="1000"
+          data-aos-once="true"
+        >
+          <ul class="timeline">
+            <li class="timeline-item">
+              <div class="timeline-info">
+                <span>June, 2022 - July, 2022</span>
+              </div>
+              <div class="timeline-marker"></div>
+              <div class="timeline-content">
+                <h3 class="timeline-title">Donut</h3>
+                <p>
+                  I have been a member of this club for almost 1.5 years, during
+                  which, I have developed my skills in competitive programming
+                  and cryptic hunting. As a core member and the head of the
+                  cryptic team, I have organized several events, both within and
+                  outside the club.
+                </p>
+              </div>
+            </li>
+            <li class="timeline-item">
+              <div class="timeline-info">
+                <span>22 August, 2022</span>
+              </div>
+              <div class="timeline-marker"></div>
+              <div class="timeline-content">
+                <h3 class="timeline-title">Hi-Tech</h3>
+                <p>
+                  I had the opportunity to organize and design levels for
+                  Re-Dcrypt 2, a national cryptic hunt held on October 8, 2022.
+                  The event featured over 200 participants and multiple sponsors
+                  and prizes.
                 </p>
               </div>
             </li>
