--- a/index.html
+++ b/index.html
@@ -404,11 +404,12 @@
               <div class="timeline-content">
                 <h3 class="timeline-title">Donut</h3>
                 <p>
-                  I have been a member of this club for almost 1.5 years, during
-                  which, I have developed my skills in competitive programming
-                  and cryptic hunting. As a core member and the head of the
-                  cryptic team, I have organized several events, both within and
-                  outside the club.
+                  Created a platform that allows superusers to easily access,
+                  add, and manipulate various forms. The platform has a robust
+                  backend that was built using Django and SQL, and a responsive
+                  frontend that was built using HTML5, CSS3, and bootstrap. This
+                  allows superusers to quickly and easily manage and manipulate
+                  their forms.
                 </p>
               </div>
             </li>
@@ -420,10 +421,12 @@
               <div class="timeline-content">
                 <h3 class="timeline-title">Hi-Tech</h3>
                 <p>
-                  I had the opportunity to organize and design levels for
-                  Re-Dcrypt 2, a national cryptic hunt held on October 8, 2022.
-                  The event featured over 200 participants and multiple sponsors
-                  and prizes.
+                  Developed a responsive frontend for a non-profit organization
+                  using HTML, CSS, and Three.js. The frontend features
+                  background animations created using Three.js, which add an
+                  engaging and interactive element to the user experience. In
+                  addition, I refactored the organization's existing code to
+                  improve its efficiency and maintainability.
                 </p>
               </div>
             </li>
