some more content update

--- a/index.html
+++ b/index.html
@@ -453,11 +453,11 @@
           data-aos-duration="1000"
           data-aos-once="true"
         >
-          I am a software developer and musician from India, currently studying
-          PCM + Computer Science from Delhi Public School, Vasant Kunj. I've
-          been playing electric guitar for over 5 years, specialising in a
-          variety of genres. Other than that, I'm passionate about programming
-          and tech in general.
+          Here are some of the notable projects that I have built. To see more
+          of my work, please visit my GitHub profile where I regularly post
+          updates and new projects. There, you can see the code and features of
+          my projects in detail and get a better understanding of my skills and
+          abilities as a developer.
         </p>
         <div
           class="project-container"
