even more content update + mail icon

--- a/index.html
+++ b/index.html
@@ -99,10 +99,8 @@
         ></a>
       </li>
       <li>
-        <a
-          href="https://instagram.com/itsnishit_jain"
-          style="text-decoration: none"
-          ><i class="fab fa-instagram"></i
+        <a href="mailto:nishitjain1726@gmail.com" style="text-decoration: none"
+          ><i class="fas fa-envelope"></i
         ></a>
       </li>
       <li>
@@ -647,11 +645,12 @@
           data-aos-duration="1200"
           data-aos-once="true"
         >
-          I am a software developer and musician from India, currently studying
-          PCM + Computer Science from Delhi Public School, Vasant Kunj. I've
-          been playing electric guitar for over 5 years, specialising in a
-          variety of genres. Other than that, I'm passionate about programming
-          and tech in general.
+          I am always looking to connect with potential clients and
+          collaborators, so please don't hesitate to reach out if you have any
+          questions or opportunities to discuss. To get in touch with me, you
+          can use the form on this page to send me an email. I will do my best
+          to respond as quickly as possible. Thank you for visiting my portfolio
+          website, and I look forward to connecting with you soon!
         </p>
         <form
           data-aos="fade-right"
