cool pulse animation

--- a/index.html
+++ b/index.html
@@ -166,21 +166,28 @@
         >
       </div>
 
-      <div
+      <!-- <div
         class="circlecontainer"
         data-aos="fade-down"
         data-aos-duration="1200"
         data-aos-once="true"
       >
         <div id="circle">
-          <div id="small-circle0">
-            <div id="small-circle">
-              <div id="small-circle1">
-                <div id="small-circle2">
-                  <img id="kmlimg" src="./assets/nishit3.png" />
-                </div>
-              </div>
-            </div>
+          <div id="small-circle2">
+            <img id="kmlimg" src="./assets/nishit3.png" />
+          </div>
+        </div>
+      </div> -->
+
+      <div
+        class="circlecontainer"
+        data-aos="fade-down"
+        data-aos-duration="1200"
+        data-aos-once="true"
+      >
+        <div class="pulse">
+          <div id="circle">
+            <img id="kmlimg" src="./assets/nishit3.png" />
           </div>
         </div>
       </div>
