--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <nav class="mobile-nav">
       <div class="mob-background"></div>
-      <div class="title">Currently listening to...</div>
+      <div class="title">My Spotify playlist</div>
       <ul>
         <li><a href="/" data-fill-text="HOME">HOME</a></li>
         <li><a href="#experience">EXPERIENCE</a></li>
@@ -108,13 +108,6 @@
           href="https://www.linkedin.com/in/nishitjain1726/"
           style="text-decoration: none"
           ><i class="fab fa-linkedin"></i
-        ></a>
-      </li>
-      <li>
-        <a
-          href="https://open.spotify.com/user/31dv7s3vb6uv2dn4nl2ednj23fhu"
-          style="text-decoration: none"
-          ><i class="fab fa-spotify"></i
         ></a>
       </li>
     </ul>
